# rumor-crawlers

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml
app/: cdc.py  tfc.py
app/backoffice/crawler/: fda.py  mygopen.py  tfc.py
app/utils/: settings.py
crawler/: Dockerfile  Makefile  pyproject.toml
crawler/app/: agent.py  config.py
crawler/app/utils/: datatypes.py  logger.py  settings.py
docker-compose-with-fastapi-practice/: Makefile  pyproject.toml
docker-compose-with-fastapi-practice/app/: agent.py
docker-compose-with-fastapi-practice/tests/: conftest.py
docker-compose_practice/: Makefile  pyproject.toml
docker-compose_practice/app/: agent.py
docker-compose_practice/app/utils/: datatypes.py
docker-compose_practice/tests/: test_util_textproc.py
py-aws-assume-role/: Dockerfile  Makefile  main.py  pyproject.toml  settings.py
regax/: mofa_test  test_re.py
rumor-crawlers/: Jenkinsfile  Makefile  README.md  pyproject.toml
rumor-crawlers/app/: ana_result.py  cdc.py  fda.py  mofa.py  mygopen.py  tfc.py
rumor-crawlers/app/backoffice/crawler/: __init__.py  cdc.py  crawler.py  fda.py  mofa.py  mygopen.py  tfc.py  whoscall.py
rumor-crawlers/app/backoffice/proxy_crawler/: general_links.py  instagram_links.py  proxy_crawler.py  surveycake_links.py
rumor-crawlers/app/models/aws/ddb/: rumor_model.py
rumor-crawlers/app/utils/: crawler.py  logger.py  settings.py
rumor-crawlers/scripts/: ana_result.py
rumor-crawlers/tests/: __init__.py  conftest.py  test_crawler.py
rumor-crawlers/tests/sample/cdc/: rumor_content_html
rumor-crawlers/tests/sample/mofa/: rumor_content_html  rumor_links_html
rumor-crawlers/tests/sample/mygopen/: rumor_content_html  rumor_links_html
scripts/: config.py
tests/: test_crawler.py
tests/sample/cdc/: rumor_links_html
(+18 files in other folders)
