[tool.poetry]
name = "py-env-builder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
gunicorn = "^20.0.4"
loguru = "^0.5.3"
requests = "^2.25.1"
boto3 = "^1.17.22"
boto = "^2.49.0"
opencv-python = "^4.5.1"
Pillow = "^8.1.2"
google-auth-oauthlib = "^0.4.3"
google-cloud-speech = "^1.3.2"
google-cloud-vision = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mutagen = "^1.45.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
