[tool.poetry]
name = "crawlers"
version = "0.1.0"
description = ""
authors = ["LWH"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
requests = "^2.25.1"
boto3 = "^1.17.22"
boto = "^2.49.0"
bs4 = "^0.0.1"
retry = "^0.9.2"
pytest-mock = "^3.5.1"
lxml = "^4.6.3"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
pynamodb = "^5.0.3"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mutagen = "^1.45.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
